--- a/weather/templates/home.html
+++ b/weather/templates/home.html
@@ -5,9 +5,20 @@
 </head>
 <body>
   <h1>Check the Weather</h1>
+  <hr>
+  <h2>Get Weather for Multiple Cities</h2>
   <form method="get" action="/weather/">
     <input type="text" name="city" placeholder="Enter city name" required>
     <button type="submit">Get Weather</button>
   </form>
+  <form method="post" action="/multi" id="multi-city-form">
+    {% csrf_token %}
+    <label for="cities">Enter cities (comma separated):</label>
+    <input type="text" name="cities" id="cities" required>
+    <input type="submit" value="Get Weather">
+  </form>
+
 </body>
 </html>
+
+
